Fixed issue with title being too large; Fixed item number not center aligned

--- a/css/responsive.less
+++ b/css/responsive.less
@@ -77,6 +77,8 @@
          align-items: center;
 
          .number {
+            display: block;
+            margin: auto;
             background-color: var(--background);
             width: 4rem;
             height: 4rem;
@@ -84,7 +86,6 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-right: 20px;
          }
 
          .content-tabs {
@@ -106,7 +107,8 @@
          }
 
          h1 {
-            font-size: 3rem;
+            font-size: 2.5rem;
+            text-align: center;
             margin: 0;
             color: black;
          }
